--- a/src/components/hooks/useEffect/Pokemon.css
+++ b/src/components/hooks/useEffect/Pokemon.css
@@ -82,8 +82,8 @@ input[type="text"] {
   border: none;
   outline: none;
   width: 32rem;
-  border-bottom: 0.2em solid #020d35;
-  background: rgba(#e91e63, 0.2);
+  border-bottom: 2px solid #020d35;
+  background: white;
   border-radius: 0.2em 0.2em 0 0;
   padding: 0.8em;
   font-size: 1.6rem;
@@ -116,6 +116,7 @@ input[type="text"] {
   padding: 1.6rem;
   position: relative;
   transition: transform 0.3s, box-shadow 0.3s;
+  color: black;
 }
 
 .pokemon-card::before {
