--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .card {
@@ -16,4 +18,14 @@
 
 .read-the-docs {
   color: #888;
+}
+.theme-container {
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  background-color: beige;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
